<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ui.detail.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:contentScrim="@color/black"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title=""
            app:toolbarId="@id/toolbar">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/ic_marvel_logo" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_16dp">

            <TextView
                android:id="@+id/description"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12dp"
                android:ellipsize="end"
                android:maxLines="4"
                android:minLines="4"
                android:theme="@style/TextViewTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/comic_card"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="@dimen/size_160dp"
                android:layout_marginTop="@dimen/margin_8dp"
                app:cardBackgroundColor="@color/red"
                app:cardCornerRadius="@dimen/margin_12dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toTopOf="@+id/stories_card"
                app:layout_constraintEnd_toStartOf="@+id/series_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/comics"
                    android:theme="@style/TextViewCardTheme" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/series_card"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="@dimen/size_160dp"
                android:layout_marginTop="@dimen/margin_8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/margin_12dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toTopOf="@+id/events_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/comic_card"
                app:layout_constraintTop_toBottomOf="@id/description">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/series"
                    android:textColor="@color/black"
                    android:theme="@style/TextViewCardTheme" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/stories_card"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="@dimen/size_160dp"
                android:layout_marginTop="@dimen/margin_8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/margin_12dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/series_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_card">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/stories"
                    android:textColor="@color/red"
                    android:theme="@style/TextViewCardTheme" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/events_card"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="@dimen/size_160dp"
                android:layout_marginTop="@dimen/margin_8dp"
                app:cardBackgroundColor="@color/red"
                app:cardCornerRadius="@dimen/margin_12dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/comic_card"
                app:layout_constraintTop_toBottomOf="@id/series_card">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/events"
                    android:textColor="@color/white"
                    android:theme="@style/TextViewCardTheme" />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>